# godot_entt_net_example

./: .gitmodules  CMakeLists.txt
src/: Client.cpp  Client.h  EntityManager.cpp  EntityManager.h  MessageContainer.h  Network.cpp  Network.h  Server.cpp  Server.h  main_client.cpp  main_server.cpp
src/messages/: entity.fbs  entity.proto  frame.fbs  frame.proto  message.fbs  message.proto  text_message.fbs  text_message.proto
